feat: configure routing from the index component

--- a/BuildApp/DjangoBuild/templates/about-us.html
+++ b/BuildApp/DjangoBuild/templates/about-us.html
@@ -450,7 +450,7 @@
         <div class="row footer-bottom d-flex justify-content-between">
           <p class="col-lg-8 col-sm-12 footer-text m-0 text-white">
 
-             &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="ti-heart" aria-hidden="true"></i> by <a href="" target="_blank">Jacktone Clarance</a>
+             &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved |   by <a href="" target="_blank">Jacktone Clarance</a>
 
           </p>
           <div class="col-lg-4 col-sm-12 footer-social">
@@ -464,7 +464,7 @@
     </footer>
     <!--================ End footer Area  =================-->
 
-      <!-- Optional JavaScript -->
+    <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
     <script src="{% static 'js/popper.js' %}"></script>
