--- a/BuildApp/DjangoBuild/templates/index.html
+++ b/BuildApp/DjangoBuild/templates/index.html
@@ -24,7 +24,7 @@
 
   <body>
     <!--================ Start Header Menu Area =================-->
-    {% block Header %}
+
     <header class="header_area">
       <div class="main_menu">
         <div class="search_input" id="search_input_box">
@@ -49,7 +49,7 @@
         <nav class="navbar navbar-expand-lg navbar-light">
           <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
-            <a class="navbar-brand logo_h" href=""
+            <a class="navbar-brand logo_h" href="index/"
               ><img src="{% static 'img/logo.png' %}" alt=""
             /></a>
             <button
@@ -88,15 +88,15 @@
                   >
                   <ul class="dropdown-menu">
                     <li class="nav-item">
-                      <a class="nav-link" href="courses.html">Courses</a>
+                      <a class="nav-link" href="courses/">Courses</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="course-details.html"
+                      <a class="nav-link" href="course-detail/"
                         >Course Details</a
                       >
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="elements.html">Elements</a>
+                      <a class="nav-link" href="elements/">Elements</a>
                     </li>
                   </ul>
                 </li>
@@ -112,17 +112,17 @@
                   >
                   <ul class="dropdown-menu">
                     <li class="nav-item">
-                      <a class="nav-link" href="blog.html">Blog</a>
+                      <a class="nav-link" href="blog/">Blog</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="single-blog.html"
+                      <a class="nav-link" href="single-blog/"
                         >Blog Details</a
                       >
                     </li>
                   </ul>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="contact.html">Contact</a>
+                  <a class="nav-link" href="contact/">Contact</a>
                 </li>
                 <li class="nav-item">
                   <a href="#" class="nav-link search" id="search">
@@ -135,7 +135,6 @@
         </nav>
       </div>
     </header>
-    {% endblock %}
     <!--================ End Header Menu Area =================-->
 
     <!--================ Start Home Banner Area =================-->
