--- a/BuildApp/DjangoBuild/templates/blog.html
+++ b/BuildApp/DjangoBuild/templates/blog.html
@@ -1,28 +1,28 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+ <head>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <link rel="icon" href="{% static 'img/favicon.png' %}" type="image/png" />
-    <title>Edustage Education</title>
+    <link rel="icon" href=" {% static 'img/favicon.png' %}" type="image/png" />
+    <title>Clarance Education</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}" />
     <link rel="stylesheet" href="{% static 'css/flaticon.css' %}" />
     <link rel="stylesheet" href="{% static 'css/themify-icons.css' %}" />
     <link rel="stylesheet" href="{% static 'vendors/owl-carousel/owl.carousel.min.css' %}" />
-    <link rel="stylesheet" href="{% static 'vendors/nice-select/css/nice-select.css' %}" />
+    <link rel="stylesheet" href=" {% static 'vendors/nice-select/css/nice-select.css' %}" />
     <!-- main css -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}" />
   </head>
 
   <body>
-    <!--================ Start Header Menu Area =================-->
-    <header class="header_area">
+     <!--================ Start Header Menu Area =================-->
+    <header class="header_area white-header">
       <div class="main_menu">
         <div class="search_input" id="search_input_box">
           <div class="container">
@@ -46,9 +46,9 @@
         <nav class="navbar navbar-expand-lg navbar-light">
           <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
-            <a class="navbar-brand logo_h" href="index.html"
-              ><img src="img/logo.png" alt=""
-            /></a>
+            <a class="navbar-brand" href="index.html">
+              <img class="logo-2" src="{% static 'img/logo2.png' %}" alt="" />
+            </a>
             <button
               class="navbar-toggler"
               type="button"
@@ -70,7 +70,7 @@
                 <li class="nav-item">
                   <a class="nav-link" href="index.html">Home</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item active">
                   <a class="nav-link" href="about-us.html">About</a>
                 </li>
                 <li class="nav-item submenu dropdown">
@@ -97,7 +97,7 @@
                     </li>
                   </ul>
                 </li>
-                <li class="nav-item submenu dropdown active">
+                <li class="nav-item submenu dropdown">
                   <a
                     href="#"
                     class="nav-link dropdown-toggle"
@@ -184,7 +184,7 @@
                             </div>
                             <div class="col-md-9">
                                 <div class="blog_post">
-                                    <img src="img/blog/main-blog/m-blog-1.jpg" alt="">
+                                    <img src="{% static 'img/blog/main-blog/m-blog-1.jpg' %}" alt="">
                                     <div class="blog_details">
                                         <a href="single-blog.html">
                                             <h2>Astronomy Binoculars A Great Alternative</h2>
@@ -216,7 +216,7 @@
                             </div>
                             <div class="col-md-9">
                                 <div class="blog_post">
-                                    <img src="img/blog/main-blog/m-blog-2.jpg" alt="">
+                                    <img src="{% static 'img/blog/main-blog/m-blog-2.jpg' %}" alt="">
                                     <div class="blog_details">
                                         <a href="single-blog.html">
                                             <h2>The Basics Of Buying A Telescope</h2>
@@ -248,7 +248,7 @@
                             </div>
                             <div class="col-md-9">
                                 <div class="blog_post">
-                                    <img src="img/blog/main-blog/m-blog-3.jpg" alt="">
+                                    <img src="{% static 'img/blog/main-blog/m-blog-3.jpg' %}" alt="">
                                     <div class="blog_details">
                                         <a href="single-blog.html">
                                             <h2>The Glossary Of Telescopes</h2>
@@ -280,7 +280,7 @@
                             </div>
                             <div class="col-md-9">
                                 <div class="blog_post">
-                                    <img src="img/blog/main-blog/m-blog-4.jpg" alt="">
+                                    <img src="{% static 'img/blog/main-blog/m-blog-4.jpg' %}" alt="">
                                     <div class="blog_details">
                                         <a href="single-blog.html">
                                             <h2>The Night Sky</h2>
@@ -312,7 +312,7 @@
                             </div>
                             <div class="col-md-9">
                                 <div class="blog_post">
-                                    <img src="img/blog/main-blog/m-blog-5.jpg" alt="">
+                                    <img src="{% static 'img/blog/main-blog/m-blog-5.jpg' %}" alt="">
                                     <div class="blog_details">
                                         <a href="single-blog.html">
                                             <h2>Telescopes 101</h2>
@@ -362,7 +362,7 @@
                             <div class="br"></div>
                         </aside>
                         <aside class="single_sidebar_widget author_widget">
-                            <img class="author_img rounded-circle" src="img/blog/author.png" alt="">
+                            <img class="author_img rounded-circle" src="{% static 'img/blog/author.png' %}" alt="">
                             <h4>Charlie Barber</h4>
                             <p>Senior blog writer</p>
                             <div class="social_icon">
@@ -379,7 +379,7 @@
                         <aside class="single_sidebar_widget popular_post_widget">
                             <h3 class="widget_title">Popular Posts</h3>
                             <div class="media post_item">
-                                <img src="img/blog/popular-post/post1.jpg" alt="post">
+                                <img src="{% static 'img/blog/popular-post/post1.jpg' %}" alt="post">
                                 <div class="media-body">
                                     <a href="blog-details.html">
                                         <h3>Space The Final Frontier</h3>
@@ -388,7 +388,7 @@
                                 </div>
                             </div>
                             <div class="media post_item">
-                                <img src="img/blog/popular-post/post2.jpg" alt="post">
+                                <img src="{% static 'img/blog/popular-post/post2.jpg' %}" alt="post">
                                 <div class="media-body">
                                     <a href="blog-details.html">
                                         <h3>The Amazing Hubble</h3>
@@ -397,7 +397,7 @@
                                 </div>
                             </div>
                             <div class="media post_item">
-                                <img src="img/blog/popular-post/post3.jpg" alt="post">
+                                <img src="{% static 'img/blog/popular-post/post3.jpg' %}" alt="post">
                                 <div class="media-body">
                                     <a href="blog-details.html">
                                         <h3>Astronomy Or Astrology</h3>
@@ -406,7 +406,7 @@
                                 </div>
                             </div>
                             <div class="media post_item">
-                                <img src="img/blog/popular-post/post4.jpg" alt="post">
+                                <img src=" {% static 'img/blog/popular-post/post4.jpg' %}" alt="post">
                                 <div class="media-body">
                                     <a href="blog-details.html">
                                         <h3>Asteroids telescope</h3>
@@ -417,7 +417,7 @@
                             <div class="br"></div>
                         </aside>
                         <aside class="single_sidebar_widget ads_widget">
-                            <a href="#"><img class="img-fluid" src="img/blog/add.jpg" alt=""></a>
+                            <a href="#"><img class="img-fluid" src="{% static 'img/blog/add.jpg' %}" alt=""></a>
                             <div class="br"></div>
                         </aside>
                         <aside class="single_sidebar_widget post_category_widget">
@@ -589,9 +589,9 @@
               </div>
               <div class="row footer-bottom d-flex justify-content-between">
                 <p class="col-lg-8 col-sm-12 footer-text m-0 text-white">
-                  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="ti-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | by <a href="" target="_blank">Jacktone Clarance</a>
+
                 </p>
                 <div class="col-lg-4 col-sm-12 footer-social">
                   <a href="#"><i class="ti-facebook"></i></a>
@@ -604,19 +604,20 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
           </footer>
           <!--================ End footer Area  =================-->
 
-          <!-- Optional JavaScript -->
-          <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-          <script src="js/jquery-3.2.1.min.js"></script>
-          <script src="js/popper.js"></script>
-          <script src="js/bootstrap.min.js"></script>
-          <script src="vendors/nice-select/js/jquery.nice-select.min.js"></script>
-          <script src="vendors/owl-carousel/owl.carousel.min.js"></script>
-          <script src="js/owl-carousel-thumb.min.js"></script>
-          <script src="js/jquery.ajaxchimp.min.js"></script>
-          <script src="js/mail-script.js"></script>
-          <!--gmaps Js-->
-          <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCjCGmQ0Uq4exrzdcL6rvxywDDOvfAu6eE"></script>
-          <script src="js/gmaps.min.js"></script>
-          <script src="js/theme.js"></script>
-        </body>
-      </html>
+           <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
+    <script src="{% static 'js/popper.js' %}"></script>
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'vendors/nice-select/js/jquery.nice-select.min.js' %}vendors/nice-select/js/jquery.nice-select.min.js"></script>
+    <script src=" {% static 'vendors/owl-carousel/owl.carousel.min.js' %}"></script>
+    <script src="{% static 'js/owl-carousel-thumb.min.js' %}"></script>
+    <script src="{% static 'js/jquery.ajaxchimp.min.js' %}"></script>
+    <script src=" {% static 'js/mail-script.js' %}"></script>
+    <!--gmaps Js-->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCjCGmQ0Uq4exrzdcL6rvxywDDOvfAu6eE"></script>
+    <script src="{% static 'js/gmaps.min.js' %}"></script>
+    <script src="{% static 'js/theme.js' %}"></script>
+  </body>
+
+</html>
